# Lua

./: README.md
carlos/: affinity.lua  amp.lua  analytics.lua  aseg.lua  bsd.lua  cfdi.lua  cluster.lua  curl.lua  d3js.lua  dicom.lua  dicom2.lua  dump.rdb  enpesos.lua  exponentials.lua  eyes.lua  fapi.lua  ferre.lua  ferre.lua.old  files.lua  fold.lua  h85.lua  histogram.lua  html.lua  io.lua  itk.lua  json.lua  kernels.lua  lvcache.lua  metric.lua  neuro.lua  oo.lua  openssl.lua  operations.lua  pipo.lua  process.lua  pubsub.lua  segment.lua  sites.lua  sqlite.lua  sqlite2.lua  (+10 more)
carlos/ferre/: adjust.lua  bixolon.lua  dbmem.lua  feed.lua  feed.lua.orig  miss.lua  sse.lua  tabs.lua  uuids.lua  vers.lua  wse.lua
db/: W39.db  W40.db  ferre.db  inventario.db
src/lapack/: CMakeLists.txt  llapack-1.0-0.rockspec  llapack.c  test  test.c
src/lapack/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lapc/: lapc-1.0-1.rockspec  lapc.c  lapc_1.c
src/lbsd/: CMakeLists.txt  lbsd-1.0-1.rockspec  lbsd.c
src/lbsd/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lcdf/: CMakeLists.txt  lcdf-1.0-1.rockspec  lcdf.c
src/lcdf/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lcurl/: lcurl-1.0-1.rockspec  lcurl.c
src/ldgst/: CMakeLists.txt  ldgst-1.0-1.rockspec  ldgst.c
src/ldgst/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/leyes/: CMakeLists.txt  leyes-1.0-1.rockspec  leyes.cpp
src/leyes/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lgdcm/: CMakeLists.txt  anon.h  anonymizer.cpp  gdcm.cpp  gdcm.cpp.new  lgdcm-2.0-1.rockspec  lgdcm.cpp  lgdcm_1.cpp
src/lgdcm/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lints/: CMakeLists.txt  lints-1.0-1.rockspec  lints.c
src/litk/: CMakeLists.txt  litk-1.0-1.rockspec  litk.cpp  litk.cxx  litk.cxx_old  litk.cxx~
src/litk/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/litk/build.luarocks/ITKFactoryRegistration/: itkMeshIOFactoryRegisterManager.h
src/litk/old/: itkGDCMImageIO.h  itkGDCMSeriesFileNames.h
src/lmg/: CMakeLists.txt  lmg-1.0-1.rockspec  lmg.c  lmg.c.new  lmg.c.new2  lmg.c.old  mongoose.c
src/lmpack/: CMakeLists.txt  lmpack-1.0-1.rockspec  lmpack.c
src/lmsgpack/: CMakeLists.txt  lmsgpack-1.0-1.rockspec  lmsgpack.c
src/locv/: CMakeLists.txt  locv-1.0-1.rockspec  locv.cpp  locv_1.cpp  opencv.cpp.old
src/locv/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lol/: lol-1.0-1.rockspec  lol.cpp
src/lspss/: lspss-1.0-1.rockspec  lspss.c
src/lsql/: CMakeLists.txt  locv-1.0-1.rockspec  locv.cpp  lsql-1.0-1.rockspec  lsql-2.0-1.rockspec  lsql-3.0-1.rockspec  lsql.1.c  lsql.c  lsql.rock.spec.orig
src/lsql/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lstem/: CMakeLists.txt  lstem-1.0-1.rockspec  lstem.c  lstem.c.orig
src/lsvm/: CMakeLists.txt  lsvm-1.0-1.rockspec  lsvm.c  lsvm.c.old
src/ltry/: .lzmq.c.swp  CMakeLists.txt  ltry-1.0-1.rockspec  ltry.c
src/ltry/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lvtk/: lvtk-1.0-0.rockspec  lvtk.cpp
src/lxlsx/: lxlsx.c
src/lxml/: CMakeLists.txt  lxml-1.0-1.rockspec  lxml.c  lxml.c.orig  lxml.cpp
src/lxml/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/lzmq/: CMakeLists.txt  lpclient.lua  lzmq-1.0-1.rockspec  lzmq.c  lzmq.c.new  lzmq.c.old
src/lzmq/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/snappy/: CMakeLists.txt  ldb-1.0-1.rockspec.old  lsnap-1.0-1.rockspec  snappy.cc
src/snappy/build.luarocks/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
